unit tests almost done

--- a/src/app/Modules/settings/admin/admin.component.html
+++ b/src/app/Modules/settings/admin/admin.component.html
@@ -24,7 +24,7 @@
                   <img
                     src="../../assets/AdminPanel/Rectangle 966.svg"
                     alt="profile-pic-outline"
-                    *ngIf="imageLoaded === false"
+                    *ngIf="imageLoaded === false || fileUrl === null"
                     [ngClass]="{
                       'is-invalid':
                         userForm.get('profilePic').invalid && addUserError
@@ -240,7 +240,7 @@
               <button
                 mat-button
                 class="admin-addNew-form-cancelButton"
-                (click)="AddNew = !AddNew; addUserError = false"
+                (click)="AddNew = !AddNew; addUserError = false; fileUrl = null"
               >
                 Cancel
               </button>
