--- a/src/app/Modules/settings/dialogs/select-devices/select-devices.component.html
+++ b/src/app/Modules/settings/dialogs/select-devices/select-devices.component.html
@@ -6,7 +6,9 @@
 <!-- <p>select-devices works!</p> -->
 <div class="row">
   <div class="col-12 d-flex">
-    <div class="col-11 select-device-title mx-2">Select SIM from inventory</div>
+    <div class="col-11 select-device-title mx-2">
+      Select Device from inventory
+    </div>
     <div class="col-1 select-device-close" (click)="onNoClick()">close</div>
   </div>
 </div>
