--- a/src/app/Modules/settings/device-groups/device-groups.component.html
+++ b/src/app/Modules/settings/device-groups/device-groups.component.html
@@ -63,14 +63,14 @@
                       placeholder="Device group name"
                       [ngClass]="{
                         'is-invalid':
-                          (addNewDeviceGroupError ||
+                          (firstFormError ||
                             firstFormGroup.get('newDeviceGroup').touched) &&
                           firstFormGroup.get('newDeviceGroup').invalid
                       }"
                     />
                     <div
                       *ngIf="
-                        (addNewDeviceGroupError ||
+                        (firstFormError ||
                           firstFormGroup.get('newDeviceGroup').touched) &&
                         firstFormGroup.get('newDeviceGroup').invalid
                       "
@@ -86,7 +86,7 @@
                       appearance="fill"
                       [ngClass]="{
                         'is-invalid':
-                          (addNewDeviceGroupError ||
+                          (firstFormError ||
                             firstFormGroup.get('newIpDomain').touched) &&
                           firstFormGroup.get('newIpDomain').invalid
                       }"
@@ -115,7 +115,7 @@
                         /> -->
                     <div
                       *ngIf="
-                        (addNewDeviceGroupError ||
+                        (firstFormError ||
                           firstFormGroup.get('newIpDomain').touched) &&
                         firstFormGroup.get('newIpDomain').invalid
                       "
@@ -138,7 +138,7 @@
                       placeholder="Add Device Description"
                       [ngClass]="{
                         'is-invalid':
-                          (addNewDeviceGroupError ||
+                          (firstFormError ||
                             firstFormGroup.get('newDescription').touched) &&
                           firstFormGroup.get('newDescription').invalid
                       }"
@@ -146,7 +146,7 @@
                     </textarea>
                     <div
                       *ngIf="
-                        (addNewDeviceGroupError ||
+                        (firstFormError ||
                           firstFormGroup.get('newDescription').touched) &&
                         firstFormGroup.get('newDescription').invalid
                       "
