Unite testing of dashboard module (#32)
* Dashboard screens, Services and Device + Sim view

* Prettier formatting

* ng lint error fixes

* ng lint warnings cleared

* Test issues resolved

* lint issue fix

* initial commit with small-cells work

* Package

* static Data Integration (device-sim) and device Groups (partial)

* Linting issues solved

* 10 jan login work start

* device-groups static data integration (except add new devices and UI Issues)

* small fix (wrap the remove devices view

* Physical View basic code

* partial slices data and admin panel bugs

* Connected view complete

* completed slices static-data and inventory (Device/SIM) Forms

* Physical view

* Small cells screen integration

* Small cells added

* Linting issues resolved

* Created modals

* services - static data integration and design changes

* Lint formatting

* sideNavbar styling

* Navbar redirection issue resolved

* pull master

* Activate a device issue

* partial formValidations

* partial button changes

* Device SIM issue resolved

* small cell work is done

* admin temp

* Test issues resolved

* src.zip file removal and updated baseurl in environment.prod

* Resizing issue resolved and dynamic site plans done

* Layout changes

* conflict resolved

* layout changes and revert back to original config methods

* Layout,resizing,dynamic site plans and bugs fixes

* Layout,resizing,dynamic site plans and bugs fixes

* device-sim  data retrieve fix

* pulling karthik code

* Code updates from Karthik and Kapil

* befor master pull

* onos conflict

* Unit testing of dashboardh module

* unit testing for dashboard module

* unit test with all validation pass with expect

Co-authored-by: Murali Vutti <murali.vutti@zensark.com>
Co-authored-by: murali-vutti-zensark <54984792+murali-vutti-zensark@users.noreply.github.com>
Co-authored-by: karthik-zensark <karthik.gaddam@zensark.com

--- a/src/app/Modules/dashboard/pages/slices/slices.component.html
+++ b/src/app/Modules/dashboard/pages/slices/slices.component.html
@@ -1139,11 +1139,6 @@
                     </div>
                   </div>
                 </div>
-                <!-- [ngClass]="
-                slice.services[0].isExpanded
-                  ? 'slice__applications_smallcells_expand'
-                  : 'slice__applications_smallcells'
-              " -->
                 <div
                   *ngIf="isAcknowledged === 8 && slice.services.length !== 0"
                   [ngClass]="
@@ -1348,17 +1343,6 @@
                     [endY]="215"
                     *ngIf="isAcknowledged !== 8 && slice.services.length !== 0"
                   ></svg:g>
-
-                  <!-- <svg:g
-                    aep-joiner
-                    [dash]="'4 5'"
-                    [title]="''"
-                    [startX]="innerWidth / 2.15"
-                    [startY]="335"
-                    [endX]="innerWidth / 2.15"
-                    [endY]="200"
-                    *ngIf="isAcknowledged === 8 && slice.services.length !== 0"
-                  ></svg:g> -->
                 </svg:svg>
               </div>
             </div>
@@ -1468,9 +1452,7 @@
       class="nomarLR mt-1 float-left col-4 small-cell"
       *ngIf="isAcknowledged === 8"
     >
-      <aep-small-cells
-        (informParent)="selectedDevice($event)"
-      ></aep-small-cells>
+      <aep-alerts (informParent)="selectedDevice($event)"></aep-alerts>
     </div>
   </div>
 </div>
