--- a/src/app/Modules/settings/device-sim/device-sim.component.html
+++ b/src/app/Modules/settings/device-sim/device-sim.component.html
@@ -106,6 +106,7 @@
                             class="form-control form-field-big"
                             type="text"
                             formControlName="newSim"
+                            value="{{ selectedSim }}"
                             name="newSim"
                             id="newSim"
                             placeholder="Enter or Scan the SIM number"
@@ -318,7 +319,6 @@
               my-1
               device-sims-detail-card
             "
-            *ngIf="device.sim"
           >
             <div class="ng-tns-c119-0 vector">
               <div class="vector-bg">
@@ -328,37 +328,23 @@
                 />
               </div>
             </div>
-            <div
-              class="mx-3 col-1 device-details-blocks device-name ng-tns-c119-0"
-            >
+            <div class="mx-3 device-details-blocks device-name ng-tns-c119-0">
               <div class="title">Device Name</div>
               <div class="desc">{{ device["display-name"] }}</div>
             </div>
             <div
-              class="
-                mx-3
-                col-1
-                device-details-blocks device-location
-                ng-tns-c119-0
-              "
+              class="mx-3 device-details-blocks device-location ng-tns-c119-0"
             >
               <div class="title">Device Location</div>
               <div class="desc">{{ device.location }}</div>
             </div>
             <div
-              class="
-                mx-3
-                col-1
-                device-details-blocks device-serial-no
-                ng-tns-c119-0
-              "
+              class="mx-3 device-details-blocks device-serial-no ng-tns-c119-0"
             >
               <div class="title">Device Serial No.</div>
               <div class="desc">{{ device["serial-number"] }}</div>
             </div>
-            <div
-              class="mx-3 col-1 device-details-blocks device-type ng-tns-c119-0"
-            >
+            <div class="mx-3 device-details-blocks device-type ng-tns-c119-0">
               <div class="title">Device Type</div>
               <div class="desc">{{ device.type }}</div>
             </div>
@@ -371,7 +357,9 @@
                 bg-light
               "
               [ngClass]="
-                deviceDetails.indexOf(deviceIndex) >= 0 ? 'v-hidden' : 'v-show'
+                deviceSimsDetailItemDetailsPopUp === true
+                  ? 'v-hidden'
+                  : 'v-show'
               "
             >
               <div
@@ -857,7 +845,7 @@
                       </div>
 
                       <div
-                        id="dayHr"
+                        id="1D"
                         class="
                           progress
                           col
@@ -870,14 +858,6 @@
                             class="dayChart"
                             id="device_timeline{{ deviceIndex }}"
                           ></div>
-                          <div>
-                            <!-- <span id="tooltip_display"></span>
-                            <br />
-                            <span id="tooltip_display1"></span> -->
-                            <br />
-                            <span id="tooltip_display2"></span>
-                            <br />
-                          </div>
                         </div>
                       </div>
                       <div
@@ -898,14 +878,6 @@
                             class="dayChart"
                             id="device_timeline{{ deviceIndex }}"
                           ></div>
-                          <div>
-                            <!-- <span id="tooltip_display"></span>
-                            <br />
-                            <span id="tooltip_display1"></span> -->
-                            <br />
-                            <span id="tooltip_display2"></span>
-                            <br />
-                          </div>
                         </div>
                       </div>
                       <div
@@ -924,14 +896,24 @@
                             class="dayChart"
                             id="device_timeline{{ deviceIndex }}"
                           ></div>
-                          <div>
-                            <!-- <span id="tooltip_display"></span>
-                            <br />
-                            <span id="tooltip_display1"></span> -->
-                            <br />
-                            <span id="tooltip_display2"></span>
-                            <br />
-                          </div>
+                        </div>
+                      </div>
+                      <div
+                        id="1W"
+                        class="
+                          progress
+                          col
+                          device-details-blocks device-progress-bar
+                        "
+                        *ngIf="
+                          deviceSimsDetailsProgressToggleWeek && zoomIn === 2
+                        "
+                      >
+                        <div>
+                          <div
+                            class="dayChart"
+                            id="device_timeline{{ deviceIndex }}"
+                          ></div>
                         </div>
                       </div>
                       <div
