Partial unit tests of settings components. (#33)
* Timeline Events (Device + Sim) and Bug fixes

* Test errors fix (Small Cells)

* console comments

* production environment - baseUrl change

* Update environment.prod.ts

* prod url change

* partial unit testing (Device-sim), (services)

* unit tests almost done

* prettier issues (index.html) fixed

* Unit tests almost done (spy and expects)

* merge conflicts

* added missing documentation(Dashboard)

* resolved prettier check for dashboard -> readme.md

--- a/src/app/Modules/settings/admin/admin.component.html
+++ b/src/app/Modules/settings/admin/admin.component.html
@@ -24,7 +24,7 @@
                   <img
                     src="../../assets/AdminPanel/Rectangle 966.svg"
                     alt="profile-pic-outline"
-                    *ngIf="imageLoaded === false"
+                    *ngIf="imageLoaded === false || fileUrl === null"
                     [ngClass]="{
                       'is-invalid':
                         userForm.get('profilePic').invalid && addUserError
@@ -240,7 +240,7 @@
               <button
                 mat-button
                 class="admin-addNew-form-cancelButton"
-                (click)="AddNew = !AddNew; addUserError = false"
+                (click)="AddNew = !AddNew; addUserError = false; fileUrl = null"
               >
                 Cancel
               </button>
@@ -414,7 +414,7 @@
           <!-- Edit form panel (User-View) -->
           <form [formGroup]="editForm">
             <div *ngIf="editUsers.indexOf(user.id) >= 0">
-              <mat-card class="col">
+              <mat-card class="col admin-edit-form">
                 <mat-card-content>
                   <div class="admin-addNew-form my-4 mx-2 d-flex">
                     <div class="admin-addNew-form-ppicHolder col-2 mx-3">
