--- a/src/app/Modules/settings/services/services.component.html
+++ b/src/app/Modules/settings/services/services.component.html
@@ -5,7 +5,6 @@
 -->
 <!-- <p>services works!</p> -->
 <div class="row container-fluid services">
-  <!-- <div class="row"> -->
   <!--left side section-->
   <div class="services-view-col-2 ml-6">
     <aep-side-navbar></aep-side-navbar>
@@ -19,7 +18,6 @@
     </div>
     <div class="services-cards my-3">
       <!--BUTTON FOR ADD NEW SERVICE-->
-      <!-- <div class="row"> -->
       <mat-card
         class="
           add-new-services add-button-services
@@ -42,12 +40,15 @@
         class="add-new-service-form my-1 forms-block"
         *ngIf="addNewServiceForm"
       >
-        <mat-card-title class="pop-over-title my-3"
+        <mat-card-title class="service-form-title pop-over-title my-3"
           >Add new service</mat-card-title
         >
-        <form [formGroup]="addServiceFormGroup">
+        <form
+          class="services-cards-new-service-form-next"
+          [formGroup]="addServiceFormGroup"
+        >
           <mat-card-content class="form-field-bg py-2">
-            <div class="form-content mx-2 my-3">
+            <div class="form-content service-forms-gen mx-2 my-3">
               <div class="col-12">
                 <div class="col-12 my-2 d-flex flex-wrap">
                   <div class="my-2 mx-3">
@@ -284,10 +285,7 @@
         </form>
       </mat-card>
       <!--END ADD NEW SERVICE FORM-->
-      <!-- </div> -->
       <!--END BUTTON FOR ADD NEW SERVICE-->
-
-      <!-- <div class="row"> -->
       <div *ngFor="let siteApp of siteApplications; let siteAppIndex = index">
         <mat-card class="card-list-items col-12 d-flex my-3 align-items-center">
           <div class="ng-tns-c119-0 card-list-item service-img">
@@ -298,27 +296,27 @@
               />
             </div>
           </div>
-          <div class="mx-1 card-list-item enter-app-name ng-tns-c119-0">
+          <div class="mx-1 col-2 card-list-item enter-app-name ng-tns-c119-0">
             <div class="title">Enter APP name</div>
             <div class="desc">{{ siteApp["display-name"] }}</div>
           </div>
-          <div class="mx-1 card-list-item protocol ng-tns-c119-0">
+          <div class="mx-1 col-1 card-list-item protocol ng-tns-c119-0">
             <div class="title">Protocol</div>
             <div class="desc">{{ siteApp.protocol }}</div>
           </div>
-          <div class="mx-1 card-list-item port-start ng-tns-c119-0">
+          <div class="mx-1 col-1 card-list-item port-start ng-tns-c119-0">
             <div class="title">Port Start</div>
             <div class="desc">{{ siteApp.portStart }}</div>
           </div>
-          <div class="mx-1 card-list-item enter-address ng-tns-c119-0">
+          <div class="mx-1 col-1 card-list-item enter-address ng-tns-c119-0">
             <div class="title">Enter Address</div>
             <div class="desc">{{ siteApp.address }}</div>
           </div>
-          <div class="mx-1 card-list-item port-end ng-tns-c119-0">
+          <div class="mx-1 col-1 card-list-item port-end ng-tns-c119-0">
             <div class="title">Port End</div>
             <div class="desc">{{ siteApp.portEnd }}</div>
           </div>
-          <div class="mx-1 card-list-item device-name ng-tns-c119-0">
+          <div class="mx-1 col-1 card-list-item device-name ng-tns-c119-0">
             <div class="title">Device name</div>
             <div class="desc">{{ siteApp.deviceName }}</div>
           </div>
@@ -347,7 +345,10 @@
           class="services-cards-edit-service-form forms-block"
           *ngIf="editService.indexOf(siteAppIndex) >= 0"
         >
-          <form [formGroup]="editServiceFormGroup">
+          <form
+            class="services-cards-edit-service-form-next"
+            [formGroup]="editServiceFormGroup"
+          >
             <mat-card-content class="form-field-bg py-2">
               <div class="form-content mx-2 my-3">
                 <div class="col-12">
@@ -566,8 +567,6 @@
         </mat-card>
         <!--END EDIT NEW SERVICE FORM-->
       </div>
-      <!-- </div> -->
     </div>
   </div>
-  <!-- </div> -->
 </div>
