Lint issues fixed, Dialog unit testing added

--- a/src/app/Modules/settings/dialogs/select-devices/select-devices.component.html
+++ b/src/app/Modules/settings/dialogs/select-devices/select-devices.component.html
@@ -27,6 +27,7 @@
             <div class="mx-1 d-flex">
               <img
                 [src]="
+                  selectedDevice &&
                   selectedDevice['serial-number'] === device['serial-number']
                     ? 'assets/deviceSim/selected-card.svg'
                     : 'assets/deviceSim/select.svg'
