device-group unit testing (#36)
* Dashboard screens, Services and Device + Sim view

* Prettier formatting

* ng lint error fixes

* ng lint warnings cleared

* Test issues resolved

* lint issue fix

* initial commit with small-cells work

* Package

* static Data Integration (device-sim) and device Groups (partial)

* Linting issues solved

* 10 jan login work start

* device-groups static data integration (except add new devices and UI Issues)

* small fix (wrap the remove devices view

* Physical View basic code

* partial slices data and admin panel bugs

* Connected view complete

* completed slices static-data and inventory (Device/SIM) Forms

* Physical view

* Small cells screen integration

* Small cells added

* Linting issues resolved

* Created modals

* services - static data integration and design changes

* Lint formatting

* sideNavbar styling

* Navbar redirection issue resolved

* pull master

* Activate a device issue

* partial formValidations

* partial button changes

* Device SIM issue resolved

* small cell work is done

* admin temp

* Test issues resolved

* src.zip file removal and updated baseurl in environment.prod

* Resizing issue resolved and dynamic site plans done

* Layout changes

* conflict resolved

* layout changes and revert back to original config methods

* Layout,resizing,dynamic site plans and bugs fixes

* Layout,resizing,dynamic site plans and bugs fixes

* device-sim  data retrieve fix

* pulling karthik code

* Code updates from Karthik and Kapil

* befor master pull

* Timeline Events (Device + Sim) and Bug fixes

* Test errors fix (Small Cells)

* console comments

* production environment - baseUrl change

* Update environment.prod.ts

* prod url change

* onos conflict

* Unit testing of dashboardh module

* partial unit testing (Device-sim), (services)

* unit testing for dashboard module

* unit tests al

--- a/src/app/Modules/settings/services/services.component.html
+++ b/src/app/Modules/settings/services/services.component.html
@@ -40,15 +40,12 @@
         class="add-new-service-form my-1 forms-block"
         *ngIf="addNewServiceForm"
       >
-        <mat-card-title class="service-form-title pop-over-title my-3"
+        <mat-card-title class="pop-over-title my-3"
           >Add new service</mat-card-title
         >
-        <form
-          class="services-cards-new-service-form-next"
-          [formGroup]="addServiceFormGroup"
-        >
+        <form [formGroup]="addServiceFormGroup">
           <mat-card-content class="form-field-bg py-2">
-            <div class="form-content service-forms-gen mx-2 my-3">
+            <div class="form-content mx-2 my-3">
               <div class="col-12">
                 <div class="col-12 my-2 d-flex flex-wrap">
                   <div class="my-2 mx-3">
@@ -296,27 +293,27 @@
               />
             </div>
           </div>
-          <div class="mx-1 col-2 card-list-item enter-app-name ng-tns-c119-0">
+          <div class="mx-1 card-list-item enter-app-name ng-tns-c119-0">
             <div class="title">Enter APP name</div>
             <div class="desc">{{ siteApp["display-name"] }}</div>
           </div>
-          <div class="mx-1 col-1 card-list-item protocol ng-tns-c119-0">
+          <div class="mx-1 card-list-item protocol ng-tns-c119-0">
             <div class="title">Protocol</div>
             <div class="desc">{{ siteApp.protocol }}</div>
           </div>
-          <div class="mx-1 col-1 card-list-item port-start ng-tns-c119-0">
+          <div class="mx-1 card-list-item port-start ng-tns-c119-0">
             <div class="title">Port Start</div>
             <div class="desc">{{ siteApp.portStart }}</div>
           </div>
-          <div class="mx-1 col-1 card-list-item enter-address ng-tns-c119-0">
+          <div class="mx-1 card-list-item enter-address ng-tns-c119-0">
             <div class="title">Enter Address</div>
             <div class="desc">{{ siteApp.address }}</div>
           </div>
-          <div class="mx-1 col-1 card-list-item port-end ng-tns-c119-0">
+          <div class="mx-1 card-list-item port-end ng-tns-c119-0">
             <div class="title">Port End</div>
             <div class="desc">{{ siteApp.portEnd }}</div>
           </div>
-          <div class="mx-1 col-1 card-list-item device-name ng-tns-c119-0">
+          <div class="mx-1 card-list-item device-name ng-tns-c119-0">
             <div class="title">Device name</div>
             <div class="desc">{{ siteApp.deviceName }}</div>
           </div>
@@ -345,10 +342,7 @@
           class="services-cards-edit-service-form forms-block"
           *ngIf="editService.indexOf(siteAppIndex) >= 0"
         >
-          <form
-            class="services-cards-edit-service-form-next"
-            [formGroup]="editServiceFormGroup"
-          >
+          <form [formGroup]="editServiceFormGroup">
             <mat-card-content class="form-field-bg py-2">
               <div class="form-content mx-2 my-3">
                 <div class="col-12">
