--- a/src/app/Modules/settings/small-cell/small-cell.component.html
+++ b/src/app/Modules/settings/small-cell/small-cell.component.html
@@ -394,13 +394,12 @@
     </div>
     <div *ngIf="viewType === 'Physical'" class="small-cells__physical-view">
       <img
-        *ngIf="sitePlanPresent"
         class="small-cells__physical-view__image"
         [src]="
           baseUrl +
-          config?.sites[sitePlanPresentIndex]['site-plans']['site-plan-list'][
-            selectedPlan
-          ]['svg-file']
+          config?.sites[0]['site-plans']['site-plan-list'][selectedPlan][
+            'svg-file'
+          ]
         "
         #physicalViewImage
       />
@@ -408,11 +407,9 @@
         <div
           class="small-cells__physical-view__device"
           *ngIf="
-            sitePlanPresent &&
             device['position'] &&
-            config?.sites[sitePlanPresentIndex]['site-plans']['site-plan-list'][
-              selectedPlan
-            ].id === device['position']['site-plan']
+            config?.sites[0]['site-plans']['site-plan-list'][selectedPlan]
+              .id === device['position']['site-plan']
           "
           [style]="
             'top: ' +
@@ -440,11 +437,9 @@
         <ng-container *ngFor="let device of devices">
           <svg:line
             *ngIf="
-              sitePlanPresent &&
               device['position'] &&
-              config?.sites[sitePlanPresentIndex]['site-plans'][
-                'site-plan-list'
-              ][selectedPlan].id === device['position']['site-plan']
+              config?.sites[0]['site-plans']['site-plan-list'][selectedPlan]
+                .id === device['position']['site-plan']
             "
             [attr.x1]="device['position']['position-x']"
             [attr.y1]="device['position']['position-y'] + 20"
@@ -459,11 +454,9 @@
         <div
           class="small-cells__physical-view__small-cell"
           *ngIf="
-            sitePlanPresent &&
             smallCell['position'] &&
-            config?.sites[sitePlanPresentIndex]['site-plans']['site-plan-list'][
-              selectedPlan
-            ].id === smallCell['position']['site-plan']
+            config?.sites[0]['site-plans']['site-plan-list'][selectedPlan]
+              .id === smallCell['position']['site-plan']
           "
           [style]="
             'top: ' +
